# desktop-sort-app

./: .gitmodules  CMakeLists.txt  README  gl_renderer.h  main.cpp  rect.cpp  rect.h  shader.cpp  shader.h
glad/include/glad/: glad.h
glad/src/: glad.c
src/: main.cpp  math.h  ref.h
src/gl/: buf.cpp  buf.hpp  gl_rect.h  gl_rect.hpp  gl_renderer.h  gl_renderer.hpp  shader.cpp  shader.h  shader.hpp
src/math/: mat.hpp  math.hpp  vec.hpp
src/ui/: aabb.h  aabb.hpp  div.h  frame.hpp  rect.cpp  rect.h  rect.hpp  style.h  style.hpp  ui_element.h  ui_element.hpp  ui_renderer.h  ui_renderer.hpp
src/window/: glfw_window.cpp  glfw_window.hpp  window.hpp
